[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/graphics_editor/Layer.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[node name="Layer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -924.0
margin_bottom = -510.0
rect_min_size = Vector2( 100, 90 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.117647, 0.117647, 0.117647, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="LayerButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 100.0
margin_bottom = 90.0

[node name="Name" type="Label" parent="."]
margin_left = 10.0
margin_top = 4.0
margin_right = 56.0
margin_bottom = 18.0
text = "Layer 1"

[node name="Visible" type="Button" parent="."]
margin_left = 80.0
margin_top = 20.0
margin_right = 100.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
text = "V"

[node name="Delete" type="Button" parent="."]
margin_left = 80.0
margin_top = 40.0
margin_right = 100.0
margin_bottom = 60.0
focus_mode = 0
enabled_focus_mode = 0
text = "X"

[node name="LayerPreview" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 20.0
margin_right = 74.0
margin_bottom = 84.0
mouse_filter = 2
color = Color( 0.329412, 0.329412, 0.329412, 1 )

[node name="TextureRect" type="TextureRect" parent="LayerPreview"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
expand = true
stretch_mode = 1
[connection signal="pressed" from="LayerButton" to="." method="_on_LayerButton_pressed"]
[connection signal="pressed" from="Visible" to="." method="_on_Visible_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_Delete_pressed"]
